Challenges/Challenge5/java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  user-java-deploy
  namespace: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-java  
  template:
    metadata:
      labels:
        app: user-java
    spec:    
      containers:
      - name:  user-java
        image:  registryslg1438.azurecr.io/java:latest
        imagePullPolicy: Always               
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/secrets"
          readOnly: true
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "team8akskv"          
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: api  
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    name: user-java-http
    port: 80
    targetPort: 80
  - protocol: TCP
    name: user-java-https
    port: 443
    targetPort: 443
  selector:
    app: user-java
