Challenges/Challenge5/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deploy
  namespace: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: poi
        image: registryslg1438.azurecr.io/poi:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/secrets"
          readOnly: true
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "team8akskv"
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: api
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    name: poi-http
    port: 80
    targetPort: 80
  - protocol: TCP
    name: poi-https
    port: 443
    targetPort: 443
  selector:
    app: poi
