Challenges/Challenge5/tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deploy
  namespace: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: tripviewer
        image: registryslg1438.azurecr.io/tripviewer:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    name: tripviewer-http
    port: 80
    targetPort: 80
  - protocol: TCP
    name: tripviewer-https
    port: 443
    targetPort: 443
  selector:
    app: tripviewer
